# merrinasp

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: test-cache.lp  test-show.lp  test-strict.lp  test.lp
examples/merrin/: model_merrin.lp  model_rfba.lp  model_rfba_assert.lp  model_rfba_dual.lp
examples/merrin/data/: data_covert_f_100.lp  data_covert_kfp_100.lp  data_covert_kp_100.lp  data_covert_p_100.lp
requirements/: install.sh  requirements-linters.txt  requirements-python.txt  requirements-tests.txt
src/: app.py
src-refact/clingopt/: app.py
src-refact/clingopt/theory/: dispatcher.py  language.py  model.py  propagator.py  solver.py
src-refact/clingopt/theory/lra/: cache.py  logger.py  model.py  solver.py
src/merrinasp/: app.py
src/merrinasp/theory/: language.py  propagator.py
src/merrinasp/theory/lra/: cache.py  logger.py  model.py  solver.py
src/merrinasp/theory/lra/models/: __init__.py  interface.py  model_glpk.py  model_gurobi.py  model_optlang.py  model_pulp.py
src/theory/: language.py  propagator.py
src/theory/lp/: lpproblem.py  parser.py  problem.py  solver.py
