[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "merrinasp"
version = "1.1.0"
authors = [
  { name="Kerian Thuillier", email="kerian.thuillier@irisa.fr" },
]
description = "MerrinASP extends the solver clingo with one quantifier level in LRA."
keywords = ["Answer Set Programming", "Quantified linear programming", "clingo", "LRA"]
readme = "README.md"
license = { file = "LICENCE" }
requires-python = ">=3.7"
dependencies = [
    "clingo >=5.6.1",
    "cplex >=22.1.1.0",
    "gurobipy >= 10.0.3",
    "gurobipy-stubs >= 2.0.0",
    "optlang >= 1.8.1",
    "pulp >= 2.7.0"
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: Unix",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://github.com/kthuillier/merrinasp"
Repository = "https://github.com/kthuillier/merrinasp/issues"

[project.scripts]
merrinasp = "merrinasp.app:main"

[tool.setuptools.package-data]
merrinasp = ["py.typed"]
